<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#FFFFFF">

    <ImageView
        android:id="@+id/header_icon"
        android:src="@drawable/ic_header_logo_circle"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="40dp"
        />

    <TextView
        android:id="@+id/series_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header_icon"
        android:layout_centerHorizontal="true"
        android:text="@string/MSG_00014"
        android:textColor="#FFFFFF"
        android:layout_marginTop="25dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textSize="11dp"
        android:background="#1E8E4B"
        android:textAllCaps="true"
        android:textStyle="bold"/>

    <com.github.ksoichiro.android.observablescrollview.ObservableScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/observable_scrollview"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:layout_below="@+id/series_title"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/content"
            android:layout_width="wrap_content"
            android:layout_height="230dp"
            android:layout_centerHorizontal="true"
            android:text="@string/MSG_00015"
            android:textColor="@color/QuestionTextColor"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:textSize="17sp"
            android:isScrollContainer="true"
            android:scrollbars = "horizontal"/>

    </com.github.ksoichiro.android.observablescrollview.ObservableScrollView>

    <TextView
        android:id="@+id/page_count_current"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/observable_scrollview"
        android:layout_centerHorizontal="true"
        android:text="@string/MSG_0016"
        android:textColor="@color/SubTextColor"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="80dp"
        android:layout_alignParentRight="true"
        android:textSize="12sp"/>

    <TextView
        android:id="@+id/page_count_of"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/observable_scrollview"
        android:layout_centerHorizontal="true"
        android:text="@string/MSG_0017"
        android:textColor="@color/SubTextColor"
        android:layout_marginTop="16dp"
        android:layout_alignRight="@+id/page_count_current"
        android:layout_marginRight="-30dp"
        android:textSize="12sp"/>

    <TextView
        android:id="@+id/page_count_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/observable_scrollview"
        android:layout_centerHorizontal="true"
        android:text="@string/MSG_0018"
        android:textColor="@color/SubTextColor"
        android:layout_marginTop="16dp"
        android:layout_alignRight="@+id/page_count_current"
        android:layout_marginRight="-80dp"
        android:paddingRight="25dp"
        android:textSize="12sp"/>

</LinearLayout>