<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eff7f9"
    tools:context="com.digital.strategy.followup.SessionActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/header_icon"
            android:src="@drawable/ic_users3"
            android:layout_width="match_parent"
            android:layout_height="270dp"
            android:scaleType="fitXY"
            />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/next_button"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginTop="-28dp"
            android:layout_alignRight="@+id/action_button_session"
            android:layout_below="@+id/header_icon"
            android:layout_marginRight="-10dp"
            android:clickable="true"
            android:visibility="invisible"
            android:src="@drawable/ic_lets_get_started" />

        <View
            android:id="@+id/title_background"
            android:background="#57C8E7"
            android:layout_below="@+id/header_icon"
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            />

        <TextView
            android:id="@+id/session_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MSG_0024"
            android:textColor="@color/TextColor"
            android:layout_below="@+id/header_icon"
            android:layout_marginTop="50dp"
            android:paddingLeft="50dp"
            android:textSize="25dp"/>

        <TextView
            android:id="@+id/session_content"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:text="@string/MSG_0025"
            android:textColor="@color/QuestionTextColor"
            android:layout_below="@+id/session_title"
            android:layout_marginTop="60dp"
            android:textSize="15dp"
            android:layout_centerHorizontal="true"/>

        <RelativeLayout
            android:id="@+id/action_button_session"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/session_content">

            <Button
                android:id="@+id/student_button"
                android:layout_width="132dp"
                android:layout_height="wrap_content"
                android:text="@string/MSG_0026"
                android:textColor="@color/QuestionTextColor"
                android:layout_marginTop="20dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:background="@drawable/button_state"
                android:stateListAnimator="@null"
                android:minHeight="40dp"
                android:minWidth="0dp"
                android:textSize="11sp"/>

            <Button
                android:id="@+id/leader_button"
                android:layout_width="132dp"
                android:layout_height="wrap_content"
                android:text="@string/MSG_0027"
                android:textColor="@color/QuestionTextColor"
                android:layout_marginTop="20dp"
                android:layout_toRightOf="@+id/student_button"
                android:layout_marginLeft="5dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:background="@drawable/button_state"
                android:stateListAnimator="@null"
                android:minHeight="40dp"
                android:minWidth="0dp"
                android:textSize="11sp"/>

        </RelativeLayout>

    </RelativeLayout>>

</RelativeLayout>
