<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/ColorBase"
    android:id="@+id/pageone"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:id="@+id/header_icon"
        android:src="@drawable/ic_banner_demo_002"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="25dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:id="@+id/follow_up_series"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header_icon"
        android:layout_marginTop="20dp"
        android:text="@string/MSG_00010"
        android:layout_centerHorizontal="true"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textSize="15sp"
        android:textColor="@color/SubTextColor"
        />

    <TextView
        android:id="@+id/follow_up_title"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/MSG_00011"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:textSize="32sp"
        android:gravity="center"
        android:textColor="@color/QuestionTextColor"
        />

    <TextView
        android:id="@+id/series_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/follow_up_title"
        android:layout_centerHorizontal="true"
        android:text="@string/MSG_00012"
        android:textColor="#FFFFFF"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="5dp"
        android:paddingTop="1dp"
        android:paddingBottom="1dp"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        android:textSize="11dp"
        android:textAllCaps="true"
        android:fontFamily="sans-serif-condensed"
        android:background="@drawable/rounded_textview"
        android:textStyle="bold"/>

    <!--<View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/HorizontalDivider"
        android:layout_below="@+id/follow_up_title"
        android:layout_marginTop="150dp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/lets_get_started"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/divider"
        android:text="@string/MSG_00013"
        android:textColor="@color/QuestionTextColor"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="25dp"
        android:textSize="18dp"/>-->

    <com.romainpiel.shimmer.ShimmerButton
        android:id="@+id/lets_get_started_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/series_title"
        android:text="@string/MSG_00013"
        android:textColor="@color/QuestionTextColor"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:background="@drawable/rounded_drawable"
        android:stateListAnimator="@null"
        android:minHeight="35dp"
        android:minWidth="0dp"
        android:textSize="12sp"/>

    <!--<android.support.design.widget.FloatingActionButton
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="-30dp"
        android:layout_alignRight="@+id/divider"
        android:layout_marginRight="20dp"
        android:layout_below="@+id/divider"
        android:clickable="true"
        android:elevation="8dp"
        android:src="@drawable/ic_lets_get_started" />

        <TextView
        android:id="@+id/read_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/divider"
        android:text="@string/MSG_00012"
        android:textColor="#FFFFFF"
        android:layout_marginTop="17dp"
        android:layout_marginLeft="25dp"
        android:paddingTop="1dp"
        android:paddingBottom="1dp"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        android:textSize="11dp"
        android:background="#1E8E4B"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/read_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/follow_up_title"
        android:text="READ VERSE"
        android:textColor="#FFFFFF"
        android:layout_marginTop="17dp"
        android:paddingTop="1dp"
        android:paddingBottom="1dp"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        android:textSize="11dp"
        android:background="#1E8E4B"
        android:textStyle="bold"/>-->

    <!--<View
        android:id="@+id/divider"
        android:layout_width="300dp"
        android:layout_height="1dp"
        android:background="@color/HorizontalDivider"
        android:layout_below="@+id/scroll_area"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/read_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/divider"
        android:text="READ VERSE"
        android:textColor="#FFFFFF"
        android:layout_marginTop="17dp"
        android:layout_marginLeft="20dp"
        android:paddingTop="1dp"
        android:paddingBottom="1dp"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        android:textSize="11dp"
        android:background="#1E8E4B"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/verse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MSG_00003"
        android:textColor="@color/QuestionTextColor"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/divider"
        android:layout_toRightOf="@+id/read_guide"
        android:layout_marginLeft="10dp"
        android:textSize="14dp"/>-->

</RelativeLayout>
